# how_knowledge_graph_llm

./: .env.example  .gitignore  README.md  THIRD_PARTY_NOTICES.md  knowledge_graph.py  pyproject.toml
data/: README.md  benchmark.jsonl
experiments/: __init__.py  config.py  conversation.py  kg_modalities.py  knowledge_graph_registry.py  models.py  reevaluate_results.py  report_results.py  run_experiment.py  simulated_user.py
experiments/evaluation/: coverage.py  llm_judge.py  metrics.py
knowledge_graphs/: Production_Planning.dot  Production_Planning.mermaid  Travel_Salesman_Problem.dot  Travel_Salesman_Problem.mermaid
tests/: test_artifact.py
