[project]
name = "how-knowledge-graph-llm"
version = "0.1.0"
description = "Research artifact for comparing knowledge-graph modalities in LLM information elicitation"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
dependencies = [
    "httpx>=0.28.1",
    "openai>=2.31.0",
    "python-dotenv>=1.2.2",
]

[tool.uv]
package = false
